# meson-cmake-pybind11-cpp-python

./: .clang-format  CMakeLists.txt  README.md  main.cpp  main.py  meson.build
api/: api-python.cpp  api.cpp  api.h
examples/cmake/: main.cpp  main.py
examples/manual/: example.cpp  example.py
examples/meson/: main.cpp  main.py
tools/: pybind11-includes.py
